static/frontary/theme.css
/* ... */
div.modal-message-item {
    height: 24px;
    font-weight: normal;
    font-size: 13px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #000000;
}

div.modal-buttons-row {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

div.modal-buttons-column {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

div.modal-button-item-row {
    margin-top: 6px;
    margin-bottom: 6px;
    height: 30px;
}

div.modal-button-item-column {
    margin-left: 8px;
    margin-right: 8px;
    height: 30px;
}

div.modal-button-item-recommendation {
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: normal;
    font-size: 14px;
    color: #FFFFFF;
    background-color: var(--submit-button-bg-color);
    border-radius: 2px;
}

div.modal-button-item-recommendation:hover {
    background-color: var(--submit-button-bg-hover-color);
    cursor: pointer;
}

div.modal-button-item-option {
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: normal;
    font-size: 14px;
    color: var(--action-button-color);
    background-color: #FFFFFF;
    border-radius: 2px;
    border: 1px solid var(--action-button-color);
}

div.modal-button-item-option:hover {
    color: #841419;
    border: 1px solid var(--action-button-hover-color);
    cursor: pointer;
}

div.tab-menu {
    height: 40px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}

table.tab-menu {
    border-collapse: separate;
}

td.tab-menu-selected {
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    text-align: center;
    vertical-align: middle;
    font-weight: normal;
    font-size: 14px;
    color: #000000;
    background-color: #FFFFFF;
    border-radius: 2px 2px 0px 0px;
    border-top: 1px solid #D7D7D7;
    border-left: 1px solid #D7D7D7;
    border-bottom: 0px;
}

td.tab-menu-unselected {
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    text-align: center;
    vertical-align: middle;
    font-weight: normal;
    font-size: 14px;
    color: var(--tab-menu-unselected-color);
    background-color: #EEEEEE;
    border-radius: 2px 2px 0px 0px;
    border: 1px solid #D7D7D7;
    border-top: 1px solid #D7D7D7;
    border-left: 1px solid #D7D7D7;
    border-bottom: 1px solid #D7D7D7;
}

td.tab-menu-unselected:hover {
    cursor: pointer;
}

td.tab-menu-before-last {
    border-right: 0px;
}

td.tab-menu-last {
    border-right: 1px solid #D7D7D7;
}

td.tab-menu-right {
    border-bottom: 1px solid #D7D7D7;
    background-color: #FFFFFF;
}

div.cell-modal-container {
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 99;
}

div.cell-modal-container::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 0.09;
    background-color: rgba(0, 0, 0, 0.55);
    z-index: -1;
}

div.cell-modal-wrapper {
    display: flex;
    width: 600px;
    padding: 24px;
    flex-direction: column;
    align-items: flex-start;
    gap: 24px;
    background-color: #FFFFFF;
    border-radius: 2px;
    max-height: 600px;
}

div.cell-modal-header {
    flex: 1 0 0;
    color: var(--title-text-color);
    font-size: 16px;
    font-weight: bold;
    display: flex;
    align-items: center;
    align-self: stretch;
    justify-content: space-between;
}

div.cell-modal-body {
    gap: 16px;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
    overflow-y: auto;
    width: 100%;
}

